// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reporting APIs CSV Generation from Saved Search ID export from non-timebased data view query stored in the saved search csv file matches 1`] = `
"_id,_ignored,_index,_score,eon,epoch,era,period
tvJJX4UBvD7uFsw9L2x4,-,timeless-test,1,Phanerozoic, Pliocene,Cenozoic,Neogene
t_JJX4UBvD7uFsw9L2x4,-,timeless-test,1,Phanerozoic, Holocene,Cenozoic,Quaternary
uPJJX4UBvD7uFsw9L2x4,-,timeless-test,1,Phanerozoic,-,Mesozoic,Cretaceous
ufJJX4UBvD7uFsw9L2x4,-,timeless-test,1,Phanerozoic,-,Mesozoic,Jurassic
uvJJX4UBvD7uFsw9L2x4,-,timeless-test,1,Phanerozoic,-,Paleozoic,Cambrian
u_JJX4UBvD7uFsw9L2x4,-,timeless-test,1,Proterozoic,-,Paleozoic,Permian
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from non-timebased data view query stored in the saved search job response data is correct 1`] = `
Object {
  "contentDisposition": "attachment; filename=*zoic.csv",
  "contentType": "text/csv; charset=utf-8",
  "title": "*zoic",
}
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view timezone formatting export with custom timezone and timeRange from locator params csv file matches 1`] = `
"order_date,category,currency,customer_id,order_id,day_of_week_i,products.created_on,sku
2019-07-11 16:00:00.000,Women's Shoes, Women's Clothing,EUR,5,730531,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0025200252, ZO0217402174, ZO0034800348, ZO0144701447
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes, Women's Accessories,EUR,27,729198,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0331203312, ZO0333603336, ZO0001200012, ZO0699606996
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes, Women's Accessories,EUR,5,726566,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0270902709, ZO0489504895, ZO0236202362, ZO0355903559
2019-07-11 16:00:00.000,Women's Accessories, Women's Shoes, Women's Clothing,EUR,17,726066,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0077700777, ZO0249302493, ZO0213902139, ZO0004200042
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,38,722629,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0424204242, ZO0403504035, ZO0506705067, ZO0395603956
2019-07-11 16:00:00.000,Men's Accessories, Men's Shoes, Men's Clothing,EUR,19,722468,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0463704637, ZO0687106871, ZO0663006630, ZO0313303133
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,38,722016,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0479704797, ZO0593105931, ZO0685006850, ZO0280802808
2019-07-11 16:00:00.000,Men's Clothing, Men's Accessories,EUR,38,720269,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0292602926, ZO0438504385, ZO0463304633, ZO0629506295
2019-07-11 16:00:00.000,Men's Clothing, Men's Accessories, Men's Shoes,EUR,38,718874,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0612606126, ZO0595905959, ZO0414104141, ZO0513505135
2019-07-11 16:00:00.000,Men's Clothing, Men's Accessories,EUR,25,717374,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0438604386, ZO0312603126, ZO0595205952, ZO0559305593
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing, Women's Accessories, Men's Accessories,EUR,19,716724,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0687606876, ZO0290502905, ZO0126701267, ZO0308503085
2019-07-11 16:00:00.000,Men's Accessories, Men's Clothing,EUR,13,714827,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0314503145, ZO0444804448, ZO0538405384, ZO0630306303
2019-07-11 16:00:00.000,Men's Clothing, Men's Accessories,EUR,38,713746,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0283802838, ZO0596705967, ZO0446704467, ZO0596405964
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,31,592109,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0396603966, ZO0452704527
2019-07-11 16:00:00.000,Women's Clothing, Women's Accessories,EUR,28,592097,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0265502655, ZO0201102011
2019-07-11 16:00:00.000,Women's Shoes, Women's Clothing,EUR,12,592088,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0026600266, ZO0184501845
2019-07-11 16:00:00.000,Women's Clothing,EUR,46,592082,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0034400344, ZO0492904929
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,51,592079,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0685006850, ZO0440504405
2019-07-11 16:00:00.000,Men's Accessories, Men's Clothing,EUR,23,592064,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0603806038, ZO0616306163
2019-07-11 16:00:00.000,Women's Accessories, Women's Shoes,EUR,22,592049,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0186201862, ZO0018800188
2019-07-11 16:00:00.000,Women's Shoes, Women's Clothing,EUR,6,592046,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0022600226, ZO0484904849
2019-07-11 16:00:00.000,Women's Clothing,EUR,22,592043,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0071900719, ZO0334103341
2019-07-11 16:00:00.000,Men's Clothing,EUR,34,592015,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0621506215, ZO0444504445
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,6,591989,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0272202722, ZO0377803778
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,52,591976,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0397103971, ZO0458104581
2019-07-11 16:00:00.000,Women's Accessories, Women's Clothing,EUR,44,591964,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0190101901, ZO0493704937
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,39,591962,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0554305543, ZO0391403914
2019-07-11 16:00:00.000,Women's Clothing, Women's Shoes,EUR,22,591949,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0259402594, ZO0025900259
2019-07-11 16:00:00.000,Men's Clothing, Men's Shoes,EUR,7,591947,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0617606176, ZO0253602536
2019-07-11 16:00:00.000,Men's Clothing,EUR,29,591933,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0113001130, ZO0553705537
2019-07-11 16:00:00.000,Men's Clothing,EUR,38,591924,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0426404264, ZO0533005330
2019-07-11 16:00:00.000,Men's Shoes, Men's Clothing,EUR,19,591919,5,2016-12-30 15:00:00.000, 2016-12-30 15:00:00.000,ZO0511805118, ZO0546605466
"
`;

exports[`Reporting APIs CSV Generation from Saved Search ID export from timebased data view timezone formatting export with custom timezone and timeRange from locator params job response data is correct 1`] = `
Object {
  "contentDisposition": "attachment; filename=Ecommerce%20Data.csv",
  "contentType": "text/csv; charset=utf-8",
  "title": "Ecommerce Data",
}
`;
